--- a/9 - react-webpack/package.json
+++ b/9 - react-webpack/package.json
@@ -23,6 +23,7 @@
         "webpack-dev-server": "^5.2.1"
     },
     "dependencies": {
+        "file-loader": "^6.2.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0"
     }
